# STM32_USB_Audio_Card

./: README.md
Code/: .mxproject  Amplifier.ioc  CMakeLists.txt  STM32G431CBUx_FLASH.ld  stm32g431.cfg
Code/Core/Inc/: cordic.h  i2s.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h
Code/Core/Src/: cordic.c  gpio.c  i2c.c  i2s.c  main.c  stm32g4xx_it.c  tim.c
Code/MDK-ARM/: Amplifier.uvguix.Misaka  Amplifier.uvoptx  Amplifier.uvprojx  startup_stm32g431xx.lst  startup_stm32g431xx.s
Code/MDK-ARM/Amplifier/: Amplifier.axf  Amplifier.build_log.htm  Amplifier.hex  Amplifier.htm  Amplifier.lnp  Amplifier.map  Amplifier.sct  Amplifier_Amplifier.dep  adc.crf  adc.d  audio.d  basicmathfunctions.d  basicmathfunctionsf16.d  bayesfunctions.d  bayesfunctionsf16.d  commontables.d  commontablesf16.d  complexmathfunctions.d  complexmathfunctionsf16.d  cs4398.d  distancefunctions.d  distancefunctionsf16.d  dma.d  fastmathfunctions.d  fastmathfunctionsf16.d  gpio.crf  gpio.d  i2c.crf  i2c.d  i2s.crf  i2s.d  main.crf  main.d  matrixfunctions.d  matrixfunctionsf16.d  startup_stm32g431xx.d  stm32g4xx_hal.crf  stm32g4xx_hal.d  stm32g4xx_hal_adc.crf  stm32g4xx_hal_adc.d  (+80 more)
Code/MDK-ARM/RTE/_Amplifier/: RTE_Components.h
Code/Middlewares/ST/STM32_USB_Device_Library/Class/AUDIO/Src/: usbd_audio.c
Code/U8G2/: u8g2_buffer.c  u8g2_d_setup.c  u8x8_d_ssd1306_128x64_noname.c
Code/USB_Device/App/: usb_device.c  usbd_audio_if.c  usbd_audio_if.h  usbd_desc.c  usbd_desc.h
Code/User/: FFT.c  FFT.h  audio.c  audio.h  cs4398.c  cs4398.h  oled.c  oled.h
Code/cmake/: gcc-arm-none-eabi.cmake
Code/cmake/stm32cubemx/: CMakeLists.txt
Code/rubbishcode/: OLED_I2C.c  OLED_I2C.h
PCB/: LM386_1.epro  主控基板_正式.epro
